2009-10-08  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_default_stop_func, GC_try_to_collect_general,
	GC_gcollect): Add the comment.
	* alloc.c (GC_try_to_collect_general): Move the assertion on
	stop_func != 0 to GC_try_to_collect().
	* alloc.c (GC_try_to_collect_general): If stop_func == 0 then use
	GC_default_stop_func instead (holding the lock).
	* alloc.c (GC_gcollect): Pass 0 as stop_func instead of
	GC_default_stop_func (to prevent data races).

2009-10-08  Ivan Maidanski <ivmai@mail.ru>

	* Makefile.direct: Move "define arguments" documentation to
	doc/README.macros; add reference to doc/README.macros.
	* Makefile.dj: Change the documentation reference to
	doc/README.macros.
	* README.QUICK: Ditto.
	* configure.ac: Ditto.
	* allchblk.c: Remove unnecessary "-D" from the comment.
	* doc/README.macros: Ditto.
	* README.environment: Ditto.
	* include/gc.h: Ditto.
	* include/gc_inline.h: Ditto.
	* include/private/gcconfig.h: Ditto.
	* README.QUICK: Fix a typo.
	* README.QUICK: Expand all tabs to spaces.
	* configure: Regenerate.
	* include/private/config.h.in: Ditto.

2009-10-07  Ivan Maidanski <ivmai@mail.ru>

	* misc.c (GC_CreateLogFile): Use FILE_ATTRIBUTE_NORMAL for
	CreateFile(); don't immediately flush every write if very verbose.

2009-10-07  Ivan Maidanski <ivmai@mail.ru>

	* doc/README.win32: Replace ".exe.log" to ".gc.log".
	* doc/README.win64: Ditto.
	* doc/README.win64: Fix a typo.
	* misc.c (GC_CreateLogFile): Strip executable file extension for
	the log file; use ".gc.log" extension (instead of ".log").

2009-10-07  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_config_macros.h: Avoid the redefinition of
	GC_xxx_THREADS macros.

2009-10-06  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_try_to_collect_general): Change the type of "result"
	local variable to GC_bool.

2009-10-06  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_config_macros.h: Use old behavior for FreeBSD and
	NetBSD platform detection code (check that other GC_xxx_THREADS