@@ -1453,11 +1453,6 @@ void GC_push_finalizer_structures(void);
 extern void (*GC_push_typed_structures)(void);
                         /* A pointer such that we can avoid linking in  */
                         /* the typed allocation support if unused.      */
-extern void (*GC_start_call_back)(void);
-                        /* Called at start of full collections.         */
-                        /* Not called if 0.  Called with allocation     */
-                        /* lock held.                                   */
-                        /* 0 by default.                                */
 
 void GC_push_regs(void);
 
